--- a/preseed.cfg
+++ b/preseed.cfg
@@ -25,9 +25,13 @@ d-i grub-installer/with_other_os boolean true
 ### Mirror settings
 # If you select ftp, the mirror/country string does not need to be set.
 d-i mirror/country string manual
-d-i mirror/http/directory string /ubuntu/
-d-i mirror/http/hostname string archive.ubuntu.com
+d-i mirror/http/directory string /debian/
+d-i mirror/http/hostname string mirror.yandex.ru
 d-i mirror/http/proxy string
+
+d-i passwd/root-login boolean true
+d-i passwd/root-password password debian
+d-i passwd/root-password-again password debian
 
 ### Partitioning
 d-i partman-auto/method string lvm
@@ -36,6 +40,8 @@ d-i partman-auto/method string lvm
 d-i partman-md/confirm boolean true
 d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/choose_partition select finish
+d-i partman-lvm/confirm boolean true
+d-i partman-lvm/confirm_nooverwrite boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
