--- a/preseed.cfg
+++ b/preseed.cfg
@@ -24,10 +24,10 @@ d-i grub-installer/with_other_os boolean true
 
 ### Mirror settings
 # If you select ftp, the mirror/country string does not need to be set.
-d-i mirror/country string manual
-d-i mirror/http/directory string /debian/
-d-i mirror/http/hostname string mirror.yandex.ru
-d-i mirror/http/proxy string
+# d-i mirror/country string manual
+# d-i mirror/http/directory string /debian/
+# d-i mirror/http/hostname string mirror.yandex.ru
+# d-i mirror/http/proxy string
 
 d-i passwd/root-login boolean true
 d-i passwd/root-password password debian
