--- a/preseed.cfg
+++ b/preseed.cfg
@@ -58,9 +58,10 @@ d-i user-setup/allow-password-weak boolean true
 d-i user-setup/encrypt-home boolean false
 
 ### Package selection
-tasksel tasksel/first standard
+tasksel tasksel/first multiselect standard, ssh-server
 d-i pkgsel/include string openssh-server build-essential
 d-i pkgsel/install-language-support boolean false
+d-i pkgsel/update-policy select none
 
 # disable automatic package updates
 d-i pkgsel/update-policy select none
