--- a/preseed.cfg
+++ b/preseed.cfg
@@ -21,6 +21,9 @@ d-i grub-installer/only_debian boolean true
 # This one makes grub-installer install to the MBR if it also finds some other
 # OS, which is less safe as it might not be able to boot that other OS.
 d-i grub-installer/with_other_os boolean true
+# Bootloader options
+d-i grub-installer/bootdev string default
+
 
 ### Mirror settings
 # If you select ftp, the mirror/country string does not need to be set.
