--- a/preseed.cfg
+++ b/preseed.cfg
@@ -69,3 +69,5 @@ d-i pkgsel/update-policy select none
 # disable automatic package updates
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
+d-i preseed/late_command string \
+    in-target sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
