--- a/preseed.cfg
+++ b/preseed.cfg
@@ -66,8 +66,8 @@ d-i pkgsel/include string openssh-server build-essential
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 
+
 # disable automatic package updates
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select full-upgrade
-d-i preseed/late_command string \
-    in-target sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
+d-i openssh-server/permit-root-login boolean true
